[portal] corrected filters alignement

--- a/portal/src/main/resources/assets/themes/panda/default/theme.css
+++ b/portal/src/main/resources/assets/themes/panda/default/theme.css
@@ -417,21 +417,14 @@ nav.horizontal a {
   float: left;
   display: block;
   position: relative;
-  width: 1;
+  width: 170px;
   margin: 0;
 }
 .filters h5 img {
   max-width: 100%;
 }
-@media screen and (min-width: 720px) {
-  .filters h5 {
-    width: 33.333333333333336%;
-  }
-}
-@media screen and (max-width: 720px) {
-  .filters h5 {
-    width: 100%;
-  }
+.filters ul {
+  margin-bottom: 0;
 }
 .filters li {
   display: inline-block;
