--- a/portal/src/main/resources/public/css/modules.less
+++ b/portal/src/main/resources/public/css/modules.less
@@ -100,8 +100,11 @@ nav.horizontal{
 .filters{
 	h5{
 		.cell;
-		.four;
+		width: 170px;
 		margin: 0;
+	}
+	ul{
+		margin-bottom: 0;
 	}
 	li{
 		display: inline-block;
